[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://art/inventory/pack.png" type="Texture2D" id=2]
[ext_resource path="res://art/numbers/5.png" type="Texture2D" id=3]
[ext_resource path="res://art/numbers/DollarSign.png" type="Texture2D" id=4]
[ext_resource path="res://art/numbers/Period.png" type="Texture2D" id=5]
[ext_resource path="res://art/inventory/blank.png" type="Texture2D" id=6]
[ext_resource path="res://art/inventory/empty.png" type="Texture2D" id=7]
[ext_resource path="res://art/inventory/gear.png" type="Texture2D" id=8]

[node name="Inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="InventoryImage" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 2 )

[node name="Window" type="ColorRect" parent="."]
offset_right = 504.0
offset_bottom = 358.0
mouse_filter = 1

[node name="BG" type="ColorRect" parent="Window"]
offset_left = 3.0
offset_top = 3.0
offset_right = 501.0
offset_bottom = 355.0
color = Color( 0, 0, 0, 1 )

[node name="ClickArea" type="Container" parent="Window/BG"]
offset_right = 498.0
offset_bottom = 352.0
pivot_offset = Vector2( -59, 54 )

[node name="Item0" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_top = 48.0
offset_right = 166.0
offset_bottom = 200.0

[node name="Item0Image" type="TextureRect" parent="Window/BG/ClickArea/Item0"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Item1" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_left = 166.0
offset_top = 48.0
offset_right = 332.0
offset_bottom = 200.0

[node name="Item1Image" type="TextureRect" parent="Window/BG/ClickArea/Item1"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Item2" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_left = 332.0
offset_top = 48.0
offset_right = 498.0
offset_bottom = 200.0

[node name="Item2Image" type="TextureRect" parent="Window/BG/ClickArea/Item2"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Item3" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_top = 200.0
offset_right = 166.0
offset_bottom = 352.0

[node name="Item3Image" type="TextureRect" parent="Window/BG/ClickArea/Item3"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Item4" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_left = 166.0
offset_top = 200.0
offset_right = 332.0
offset_bottom = 352.0

[node name="Item4Image" type="TextureRect" parent="Window/BG/ClickArea/Item4"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Item5" type="ColorRect" parent="Window/BG/ClickArea"]
visible = false
offset_left = 332.0
offset_top = 200.0
offset_right = 498.0
offset_bottom = 352.0

[node name="Item5Image" type="TextureRect" parent="Window/BG/ClickArea/Item5"]
offset_left = 3.0
offset_top = 3.0
offset_right = 163.0
offset_bottom = 149.0
texture = ExtResource( 6 )

[node name="Border" type="ColorRect" parent="Window/BG"]
offset_top = 45.0
offset_right = 500.0
offset_bottom = 48.0

[node name="Cash" type="TextureRect" parent="Window/BG"]
offset_left = 2.0
offset_top = 2.0
offset_right = 32.0
offset_bottom = 42.0
texture = ExtResource( 4 )

[node name="Dot" type="TextureRect" parent="Window/BG"]
offset_left = 90.0
offset_top = 20.0
offset_right = 102.0
offset_bottom = 40.0
texture = ExtResource( 5 )

[node name="Wallet" type="Container" parent="Window/BG"]
offset_left = 31.0
offset_right = 170.0
offset_bottom = 45.0

[node name="0" type="TextureRect" parent="Window/BG/Wallet"]
offset_left = 2.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 44.0
texture = ExtResource( 3 )

[node name="1" type="TextureRect" parent="Window/BG/Wallet"]
offset_left = 32.0
offset_top = 4.0
offset_right = 62.0
offset_bottom = 44.0
texture = ExtResource( 3 )

[node name="2" type="TextureRect" parent="Window/BG/Wallet"]
offset_left = 74.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 44.0
texture = ExtResource( 3 )

[node name="3" type="TextureRect" parent="Window/BG/Wallet"]
offset_left = 104.0
offset_top = 4.0
offset_right = 134.0
offset_bottom = 44.0
texture = ExtResource( 3 )

[node name="Empty" type="TextureRect" parent="Window/BG"]
offset_top = 50.0
offset_right = 500.0
offset_bottom = 350.0
texture = ExtResource( 7 )

[node name="Settings" type="TextureRect" parent="Window/BG"]
offset_left = 452.0
offset_top = 2.0
offset_right = 492.0
offset_bottom = 42.0
texture = ExtResource( 8 )

[connection signal="gui_input" from="Window/BG/ClickArea/Item0/Item0Image" to="." method="_on_Item0Image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item0/Item0Image" to="." method="_on_Item0Image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item0/Item0Image" to="." method="_on_Item0Image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/ClickArea/Item1/Item1Image" to="." method="_on_Item1Image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item1/Item1Image" to="." method="_on_Item1Image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item1/Item1Image" to="." method="_on_Item1Image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/ClickArea/Item2/Item2Image" to="." method="_on_Item2image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item2/Item2Image" to="." method="_on_Item2image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item2/Item2Image" to="." method="_on_Item2image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/ClickArea/Item3/Item3Image" to="." method="_on_Item3Image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item3/Item3Image" to="." method="_on_Item3Image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item3/Item3Image" to="." method="_on_Item3Image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/ClickArea/Item4/Item4Image" to="." method="_on_Item4Image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item4/Item4Image" to="." method="_on_Item4Image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item4/Item4Image" to="." method="_on_Item4Image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/ClickArea/Item5/Item5Image" to="." method="_on_Item5Image_gui_input"]
[connection signal="mouse_entered" from="Window/BG/ClickArea/Item5/Item5Image" to="." method="_on_Item5Image_mouse_entered"]
[connection signal="mouse_exited" from="Window/BG/ClickArea/Item5/Item5Image" to="." method="_on_Item5Image_mouse_exited"]
[connection signal="gui_input" from="Window/BG/Settings" to="." method="_on_Settings_gui_input"]
[connection signal="mouse_entered" from="Window/BG/Settings" to="." method="_on_Settings_mouse_entered"]
